# stockalerts

./: .gitignore  README.md  check_schema.py  git_sync.py  he_alerts_structure.md  import_data.py  sync_repo.py
he_alerts/: .env.example  .env.setup  .gitignore  .replit  ALERT_WORKFLOW_GUIDE.md  NEXT_STEPS.md  README.md  REPLIT_DEPLOYMENT.md  SESSION_SUMMARY.md  SYSTEM_ARCHITECTURE.md  alembic.ini  alert_workflow.py  analyze_crypto_images.py  automated_scheduler.py  check_crypto_data.py  check_crypto_extraction.py  compare_crypto_data.py  correct_crypto_data.py  crypto_email_text_20250725_001637.txt  debug_crypto_data_extraction.py  debug_crypto_structure.py  debug_etf_ocr.py  debug_ideas_ocr.py  debug_ideas_structure.py  download_crypto2_image.py  download_crypto_images.py  email_extraction_validator.py  export_final_csv.py  export_stocks_db.py  extract_crypto_correct.py  fetch_crypto_email.py  fetch_latest_emails.py  final_crypto_fix.py  find_derivative_table.py  generate_and_send_alerts.py  manual_crypto_fix.py  manual_crypto_fix2.py  ocr_crypto_images.py  process_ideas_image.py  pyproject.toml  (+38 more)
he_alerts/alembic/: env.py
he_alerts/app/: __init__.py  main.py  main_with_scheduler.py
he_alerts/app/api/: __init__.py  deps.py
he_alerts/app/api/v1/: api.py
he_alerts/app/api/v1/endpoints/: email.py  health.py  prices.py  stocks.py
he_alerts/app/core/: __init__.py  config.py  database.py  logging.py
he_alerts/app/models/: __init__.py  base.py  stock.py
he_alerts/app/schemas/: __init__.py  stock.py
he_alerts/app/services/: __init__.py  alert_generator.py  email_processor.py  email_sender.py
he_alerts/app/services/database/: __init__.py  stock_service.py
he_alerts/app/services/email/: __init__.py  base.py  gmail_client.py
he_alerts/app/services/email/extractors/: __init__.py  crypto.py  crypto_parser.py  crypto_parser_v2.py  daily.py  daily_parser.py  etf.py  etf_parser.py  ideas.py  ideas_parser.py
he_alerts/app/services/email/processors/: __init__.py  mistral.py
he_alerts/app/services/ibkr/: __init__.py  contract_resolver.py  price_fetcher.py
he_alerts/app/services/scheduler/: __init__.py  automated_scheduler.py  market_calendar.py  price_updater.py
he_alerts/app/utils/: __init__.py
he_alerts/docs/: AUTOMATED_SCHEDULER.md  FLOW_DIAGRAM.md  IBKR_PRICE_UPDATE.md  NEXT_SESSION_CHECKLIST.md  SESSION_SUMMARY_CLEANUP.md
he_alerts/scripts/: __init__.py  init_db.py
he_alerts/scripts/diagnostics/: check_alerts.py  check_all_stocks.py  check_database_contents.py  check_price_results.py
(+101 files in other folders)
